[package]
name = "fmt_comma"
version = "0.1.0"
edition = "2021"
authors = ["takeweb"]
description = "Format Comma library"
license = "MIT"
include = ["src/", "README.md"]
homepage = "https://github.com/takeweb/fmt_comma/README.md"
repository = "https://github.com/takeweb/fmt_comma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
